--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -19,12 +19,12 @@ window#waybar {
 }
 
 #workspaces button:hover {
-  background: inherit;
-  color: inherit;
-  border-color: inherit;
-  box-shadow: none;
-  text-decoration: none;
-  opacity: 1;
+    background: inherit;
+    color: inherit;
+    border-color: inherit;
+    box-shadow: none;
+    text-decoration: none;
+    opacity: 1;
 }
 
 #workspaces button.active {
@@ -47,7 +47,8 @@ window#waybar {
 #workspaces,
 #tray,
 #bluetooth,
-#backlight {
+#backlight,
+#custom-power {
     background: #1e1e2e;
     padding: 2px 10px;
     margin-top: 3px;
@@ -108,7 +109,12 @@ window#waybar {
 }
 
 #tray {
-    border-radius: 10px;
+    border-radius: 10px 0 0 10px;
+    margin-left: 10px;
+}
+
+#custom-power {
+    color: #f38ba8;
+    border-radius: 0 10px 10px 0;
     margin-right: 10px;
-    padding: 2px 10px;
 }
